--- a/.github/workflows/azure-webapp-node.yml
+++ b/.github/workflows/azure-webapp-node.yml
@@ -20,8 +20,11 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: './the-weather-app/package-lock.json'
 
       - name: Instalar dependencias (producción)
+        working-directory: ./the-weather-app
         run: npm ci --omit=dev
 
       - name: Paso de build (opcional)
