--- a/.github/workflows/azure-webapp-node.yml
+++ b/.github/workflows/azure-webapp-node.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Configurar Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '22'
+          node-version: '20'
 
       - name: Instalar dependencias (producción)
         run: npm ci --omit=dev
@@ -37,5 +37,5 @@ jobs:
       - name: Desplegar a Azure App Service
         uses: azure/webapps-deploy@v3
         with:
-          app-name: "the-weather-app-demo"
+          app-name: "the-weather-app-demo2"
           package: "."
